syntax = "proto3";

package email;

service Email {
    rpc SendEmail(EmailRequest) returns (EmailResponse) {}
}

message EmailRequest {
    string from = 1;
    string to = 2;
    string subject = 3;
    string body = 4;
}

message EmailResponse {
    string message = 1;
}
